--- a/config/emi.css
+++ b/config/emi.css
@@ -96,20 +96,9 @@
 	empty-search-sidebar-focus: none;
 
 	/**
-	 * Whether the EMI config button should be visible.
+	 * The amount of vertical margin to give in the recipe screen.
 	 */
-	emi-config-button-visibility: shown;
-
-	/**
-	 * Whether the recipe tree button should be visible.
-	 */
-	recipe-tree-button-visibility: auto;
-
-	/**
-	 * The maximum height the recipe screen will grow to be if space is available in
-	 * pixels.
-	 */
-	maximum-recipe-screen-height: 256;
+	vertical-margin: 20;
 
 	/**
 	 * The minimum width of the recipe screen in pixels. Controls how many tabs there
@@ -117,11 +106,6 @@
 	 * of most screens.
 	 */
 	minimum-recipe-screen-width: 176;
-
-	/**
-	 * The amount of vertical margin to give in the recipe screen.
-	 */
-	vertical-margin: 20;
 
 	/**
 	 * Where to show workstations in the recipe screen
@@ -308,7 +292,7 @@
 	toggle-visibility: "ctrl key.keyboard.o";
 
 	/**
-	 * Focuses the search bar.
+	 * Focuse the search bar.
 	 */
 	focus-search: "ctrl key.keyboard.f";
 
